* Fix word wrap of 'Select file' button at Upload dialog

--- a/src/view/Components/Import/UploadDialog/style.scss
+++ b/src/view/Components/Import/UploadDialog/style.scss
@@ -45,6 +45,7 @@
 
 .browse-btn {
   margin: 0;
+  white-space: nowrap;
 }
 
 .browse-btn,
